fixed search engine optimization link

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,7 +35,7 @@
     <div class="content">
 
         <!--"search engine optimization" section-->
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" 
             alt="Search engine optimization incorporates Content, Headiness, Mobile Compatibility, Social Media, Link Building, and Backlinks" />
             <h2>Search Engine Optimization</h2>
